--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.yokeyword.sample">
+    package="me.woayli1.sample">
 
     <application
         android:allowBackup="true"
@@ -10,6 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +21,11 @@
 
         <activity
             android:name=".city.PickCityActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
         <activity
             android:name=".contact.PickContactActivity"
+            android:exported="false"
             android:screenOrientation="portrait" />
     </application>
 
